# EasyTk

./: .gitignore  README.md  TODO.md  pyproject.toml
example/: main.py
src/EasyTk/: __init__.py  ezFrame.py  ezMsgBox.py  ezTk.py  msgbox.py
src/EasyTk/Widgets/: __init__.py
src/EasyTk/core/: ezCheckoxList.py  ezDFViewer.py  ezFrame.py  ezMsgBox.py  ezTk.py  function.py
src/deprecated/: __Discard__.py
tests/: CreateTests.py  Example.py
