[project]
authors = [
  {name = "Your Name", email = "you@example.com"},
]
dependencies = ["pillow (>=11.3.0,<12.0.0)", "pandas (>=2.3.3,<3.0.0)", "openpyxl (>=3.1.5,<4.0.0)"]
description = ""
name = "EasyTk"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[tool.poetry]
packages = [{include = "EasyTk", from = "src"}]

exclude = [
  "src/EasyTk/__Discard__.py",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]
